Mon Aug 26 15:27:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/timeout.rb (Timeout#timeout): should not be caught by rescue
	  clause.  [Bug #8730]

Mon Aug 26 14:44:26 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_splice): use RARRAY_PTR_USE() without WB because
	  there are not new relations.

	* enum.c (enum_sort_by): ditto.

	* struct.c (setup_struct): use RARRAY_RAWPTR().

	* vm_eval.c (yield_under): ditto.

	* ext/pathname/pathname.c (path_entries): use RARRAY_AREF().

	* ext/pathname/pathname.c (path_s_glob): ditto.

Mon Aug 26 13:11:10 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* array.c (ary_ensure_room_for_push): fix typo in r42658.

Mon Aug 26 12:37:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/sizes.c.tmpl: generate automatically by extracting
	  RUBY_CHECK_SIZEOF from configure.in.

Mon Aug 26 10:16:59 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* process.c (gcd_timetick_int): Renamed from gcd_timtick_int.

Sun Aug 25 21:02:15 2013  Tanaka Akira  <akr@fsij.org>

	* sizes.c (Init_sizes): Define the size of clock_t.

Sun Aug 25 01:47:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BARY_SHORT_MUL): Renamed from BARY_MUL1.
	  (bary_short_mul): Renamed from bary_mul1.

Sat Aug 24 10:35:09 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): The emulated clock names changed.

Fri Aug 23 22:22:07 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): Add a cast to fix compile error by
	  -Werror,-Wshorten-64-to-32.

Fri Aug 23 22:12:13 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_intern): no symbol cache while initialization.

Fri Aug 23 22:07:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (clock_t): needs time.h.

Fri Aug 23 21:37:28 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (reduce_factors): New function.
	  (timetick2dblnum): Use reduce_factors.
	  (timetick2integer): Ditto.
	  (make_clock_result): Follow the above change.